# sybil

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  clippy.toml  comparison_bisect.json  comparison_filter.json  comparison_new.json  comparison_prop.json  comparison_trim.json  docker-compose.itest.yml  docker-compose.l1.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.prover-soak.yml  docker-compose.soak.yml  docker-compose.telegram.yml  docker-compose.validity.yml  docker-compose.yml  justfile  mkdocs.yml
arena/: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  debug_drift.py  demo.py  mm_backtest.py  mm_param_sweep.py  mm_pnl_analysis.py  pyproject.toml
arena/backtest/: agent.py  news.py  runner.py
arena/backtest/tui/: __init__.py  app.py  styles.tcss  widgets.py
arena/bots/: __init__.py  backtest_mm.py  base.py  flash_mm.py  informed.py  llm_news_trader.py  market_maker.py  random_trader.py  strategy_agent.py
arena/datasets/: fetch_gdelt.py  merge_datasets.py  nba_sample.json  trader_sources.py
arena/docs/: llm-trader-flow.md
arena/examples/: full_competition.py  simple_test.py
arena/feeds/: __init__.py  sports.py  synthetic.py
arena/iran/: __init__.py  bot_logic.md  clock.py  news_explorer.py  news_trader.py  phase1_filter.py  runner.py  simulation_gap_analysis.md
arena/iran/runs/: 20260222_145448.json  20260223_144425.json  20260224_222616.json  20260226_003509_day20260103.json  20260226_103234_day20260101.json  20260226_114616_day20260103.json  20260226_124458_day20260105.json  20260226_163758_day20260105.json
arena/iran/tmp/: american_trader_20260104_phase1_results.json  american_trader_20260107_phase1_results.json  american_trader_20260108_phase1_results.json  american_trader_20260109_phase1_results.json  american_trader_20260110_phase1_results.json  american_trader_20260111_phase1_results.json  american_trader_20260122_phase1_results.json  american_trader_20260123_phase1_results.json  american_trader_20260124_phase1_results.json  american_trader_20260127_phase1_results.json  american_trader_20260128_phase1_results.json  american_trader_20260129_phase1_results.json  american_trader_20260131_phase1_results.json  american_trader_20260204_phase1_results.json  american_trader_20260205_phase1_results.json  american_trader_20260206_phase1_results.json  american_trader_20260211_phase1_results.json  american_trader_20260212_phase1_results.json  american_trader_20260213_phase1_results.json  american_trader_20260215_phase1_results.json  american_trader_20260219_phase1_results.json  anti_us_trader_20260105_phase1_results.json  arab_trader_20260102_phase1_results.json  arab_trader_20260104_phase1_results.json  arab_trader_20260105_phase1_results.json  arab_trader_20260106_phase1_results.json  arab_trader_20260108_phase1_results.json  arab_trader_20260110_phase1_results.json  (+72 more)
arena/live/: __init__.py  __main__.py  analyst.py  costs.py  dashboard.py  db.py  fair_value_bus.py  market_selection.py  metrics.py  news_feed.py  noise_coordinator.py  outcomes.py  personas.py  pricing.py  provider_health.py  queries.py  read_api.py  runner.py  sqlite_utils.py  status.py  strategy.py  synthetic.py  trader.py
arena/markets/: __init__.py
arena/nba/: __init__.py  demo.py
arena/scripts/: __init__.py  calibration.py  calibration_compare.py  openapi-python-client-config.yml  record_outcomes.py  regen-sdk.sh  run_competition.py
arena/sim/: __init__.py  clock.py  headline_filter.py  llm_trader.py  news_trader.py  phase2_filter.py  rebalancer.py  results.py  runner.py
arena/sybil_client/: README.md  __init__.py  client.py  types.py
arena/tests/: __init__.py  test_analyst.py  test_bots.py  test_calibration.py  test_calibration_compare.py  test_client.py  test_clock.py  test_db_participant_metadata.py  test_kelly.py  test_live_experiment_status.py  test_live_queries.py  test_live_runner_startup.py  test_live_trader.py  test_llm_cost.py  test_llm_news_trader.py  test_llm_trader.py  test_market_selection.py  test_metrics.py  test_news_feed.py  test_news_trader.py  test_noise_coordinator.py  test_provider_health.py  test_read_api.py  test_record_outcomes.py  test_runtime_cohort.py  test_sdk.py  test_sim_results.py  test_sim_runner.py  test_stage1_ab.py  test_status.py  test_synthetic.py
arena/viz/: news_explorer.py
crates/jit-study/: Cargo.toml
crates/matching-engine/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/matching-scenarios/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/matching-sequencer/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/matching-sim/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/matching-solver/: AGENTS.md  CLAUDE.md  CLEARING.md  Cargo.toml
crates/sequencer-sim/: AGENTS.md  Cargo.toml
crates/sybil-api/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/sybil-api-types/: AGENTS.md  Cargo.toml
crates/sybil-canonical/: Cargo.toml
crates/sybil-client/: AGENTS.md  Cargo.toml
crates/sybil-custody/: AGENTS.md  Cargo.toml  README.md
crates/sybil-escape-claim/: AGENTS.md  Cargo.toml
crates/sybil-history/: AGENTS.md  Cargo.toml
crates/sybil-history-types/: AGENTS.md  Cargo.toml
crates/sybil-l1-abi/: AGENTS.md  Cargo.toml
crates/sybil-l1-indexer/: AGENTS.md  Cargo.toml
crates/sybil-l1-protocol/: AGENTS.md  Cargo.toml
crates/sybil-loadtest/: AGENTS.md  Cargo.toml
crates/sybil-market-maker/: AGENTS.md  Cargo.toml
crates/sybil-native/: AGENTS.md  Cargo.toml  native_markets.json
crates/sybil-oracle/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/sybil-polymarket/: AGENTS.md  CLAUDE.md  Cargo.toml  curated_markets.json  native_markets.json
crates/sybil-proof-protocol/: AGENTS.md  Cargo.toml
crates/sybil-prover/: AGENTS.md  Cargo.toml
crates/sybil-signing/: AGENTS.md  Cargo.toml
fuzz/: AGENTS.md  Cargo.toml
fuzz/fuzz_targets/: fuzz_order_parse.rs  fuzz_settlement.rs
viz/: app.py  pyproject.toml
viz/pages/: 1_overview.py  2_markets.py  3_orders.py  4_orderbook.py  5_solvers.py
viz/utils/: __init__.py  loader.py
(+2058 files in other folders)
