[workspace]
resolver = "3"
members = [
    "crates/matching-engine",
    "crates/matching-solver",
    "crates/matching-scenarios",
    "crates/matching-sim",
    "crates/matching-sequencer",
    "crates/sequencer-sim",
    "crates/sybil-canonical",
    "crates/sybil-oracle",
    "crates/sybil-api",
    "crates/sybil-api-types",
    "crates/sybil-client",
    "crates/sybil-verifier",
    "crates/sybil-zk",
    "crates/sybil-prover",
    "crates/sybil-polymarket",
]

[profile.release]
overflow-checks = true

[workspace.dependencies]
rand = "0.10"
rand_chacha = "0.10"
thiserror = "2"
