[workspace]
resolver = "3"
members = [
    "crates/matching-engine",
    "crates/matching-solver",
    "crates/matching-scenarios",
    "crates/matching-sim",
    "crates/matching-sequencer",
    "crates/sequencer-sim",
    "crates/sybil-signing",
    "crates/sybil-oracle",
    "crates/sybil-api",
    "crates/sybil-api-types",
    "crates/sybil-client",
    "crates/sybil-l1-indexer",
    "crates/sybil-l1-protocol",
    "crates/sybil-verifier",
    "crates/sybil-zk",
    "crates/sybil-prover",
    "crates/sybil-polymarket",
]

[profile.release]
overflow-checks = true

# Enforced only in crates that opt in with `[lints] workspace = true`
# (matching-engine, matching-sequencer). See clippy.toml for the f64 ban
# rationale. `unwrap_used` keeps `.unwrap()` out of core library code (tests are
# exempted via `allow-unwrap-in-tests`).
[workspace.lints.clippy]
disallowed_types = "deny"
unwrap_used = "deny"

[workspace.dependencies]
rand = "0.10"
rand_chacha = "0.10"
thiserror = "2"
