[workspace]
resolver = "3"
members = [
    "crates/matching-engine",
    "crates/matching-solver",
    "crates/matching-scenarios",
    "crates/matching-sim",
    "crates/matching-sequencer",
    "crates/sequencer-sim",
    "crates/sybil-signing",
    "crates/sybil-oracle",
    "crates/sybil-api",
    "crates/sybil-api-types",
    "crates/sybil-history-types",
    "crates/sybil-history",
    "crates/sybil-loadtest",
    "crates/sybil-client",
    "crates/sybil-market-maker",
    "crates/sybil-native",
    "crates/sybil-l1-abi",
    "crates/sybil-l1-indexer",
    "crates/sybil-l1-protocol",
    "crates/sybil-verifier",
    "crates/sybil-zk",
    "crates/sybil-escape-claim",
    "crates/sybil-custody",
    "crates/sybil-prover",
    "crates/sybil-proof-protocol",
    "crates/sybil-polymarket",
    "tools/golden-vectors",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
# OpenVM v2.0 compiles the guest closure with nightly-2026-01-18 (Rust 1.94).
# Keep the MSRV compatible with that pinned compiler; host/CI use Rust 1.97.
rust-version = "1.94"

[profile.release]
overflow-checks = true

# Enforced only in crates that opt in with `[lints] workspace = true`
# (matching-engine, matching-sequencer). See clippy.toml for the f64 ban
# rationale. `unwrap_used` keeps `.unwrap()` out of core library code (tests are
# exempted via `allow-unwrap-in-tests`).
[workspace.lints.clippy]
disallowed_types = "deny"
unwrap_used = "deny"

[workspace.dependencies]
alloy = { version = "2.1.1", default-features = false }
blake3 = "1"
clap = "4.5"
getrandom = "0.4"
hex = "0.4"
ipnet = "2.12"
p256 = "0.14"
proptest = "1.11"
rand = "0.10"
rand_chacha = "0.10"
ratelimit = "2.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
rmp-serde = "1"
serde = "1"
serde_json = "1"
sha3 = "0.12"
thiserror = "2"
tokio = "1"
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
