[project]
name = "sybil-arena"
version = "0.1.0"
description = "AI Agent Trading Competition for Sybil Prediction Markets"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",          # Async HTTP client
    "pydantic>=2.0",        # Data validation
    "sseclient-py>=1.8",    # SSE streaming
    "textual>=1.0",         # TUI framework
    "rich>=13.0",           # Pretty console output (used by textual + final leaderboard)
    "python-dotenv>=1.2.1",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
    "altair>=6.0.0",
    "openai>=2.16.0",
    "trafilatura>=2.0.0",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
sports = [
    "aiohttp>=3.9",         # For sports API
]
crypto = [
    "websockets>=12.0",     # For Binance WS
]
llm = [
    "anthropic>=0.25",      # For Claude-powered bots
    "openai>=1.0",          # For GPT-powered bots
    "trafilatura>=2.0",     # Article text extraction
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sybil_client", "bots", "feeds", "sim", "markets", "live"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
