[package]
name = "sybil-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.94"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
matching-engine = { path = "../crates/matching-engine" }
matching-sequencer = { path = "../crates/matching-sequencer" }
sybil-api = { path = "../crates/sybil-api" }
serde_json = "1"

[[bin]]
name = "fuzz_order_parse"
path = "fuzz_targets/fuzz_order_parse.rs"
doc = false

[[bin]]
name = "fuzz_settlement"
path = "fuzz_targets/fuzz_settlement.rs"
doc = false
