[project]
name = "sybil-viz"
version = "0.1.0"
description = "Interactive visualization dashboard for Sybil matching pipeline"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
