[project]
name = "sybil-viz"
version = "0.1.0"
description = "Interactive visualization dashboard for Sybil matching pipeline"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.55.0",
    "plotly>=5.24",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff.lint]
# Ruff 0.16 broadened its implicit defaults. Keep the existing lint contract
# explicit so dependency refreshes do not silently introduce new policy.
select = ["E4", "E7", "E9", "F"]
