[package]
name = "jit-study"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
indexmap = "2.2"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }

[dependencies.good_lp]
version = "1.10"
features = ["coin_cbc"]
optional = true

[features]
default = []
lp-validation = ["good_lp"]
