[package]
name = "matching-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core matching types and logic for prediction market matching"

[dependencies]
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
