[package]
name = "matching-scenarios"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Scenario generators for prediction market matching"

[dependencies]
matching-engine = { path = "../matching-engine" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
