[package]
name = "matching-sequencer"
version = "0.1.0"
edition = "2021"
description = "Agent-based multi-batch simulation for prediction market matching"

[[bin]]
name = "sybil-sim"
path = "src/bin/sybil_sim.rs"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-solver = { path = "../matching-solver", features = ["lp"] }
sybil-canonical = { path = "../sybil-canonical" }
sybil-oracle = { path = "../sybil-oracle" }
sybil-verifier = { path = "../sybil-verifier" }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
blake3 = "1"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1"
redb = "4"
commonware-codec = "2026.4.0"
commonware-cryptography = "2026.4.0"
commonware-runtime = "2026.4.0"
commonware-storage = "2026.4.0"
futures = "0.3"
getrandom = "0.4"
p256 = { version = "0.14.0-rc.7", features = ["ecdsa"] }
ractor = { version = "0.15.12", default-features = false, features = ["async-trait", "tokio_runtime"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
metrics = "0.24"

[dev-dependencies]
proptest = "1.6"
