[package]
name = "matching-sequencer"
version = "0.1.0"
edition = "2021"
description = "Multi-batch block sequencer for prediction market matching"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-solver = { path = "../matching-solver", features = ["lp"] }
sybil-signing = { path = "../sybil-signing" }
sybil-oracle = { path = "../sybil-oracle" }
sybil-l1-protocol = { path = "../sybil-l1-protocol" }
sybil-verifier = { path = "../sybil-verifier" }
sybil-zk = { path = "../sybil-zk" }
blake3 = "1"
hex = "0.4"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1"
redb = "4"
commonware-codec = "2026.5.0"
commonware-cryptography = "2026.5.0"
commonware-parallel = "2026.5.0"
commonware-runtime = "2026.5.0"
commonware-storage = "2026.5.0"
futures = "0.3"
getrandom = "0.4"
p256 = { version = "0.14.0-rc.7", features = ["ecdsa"] }
ractor = { version = "0.15.12", default-features = false, features = ["async-trait", "tokio_runtime"] }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
metrics = "0.24"

[dev-dependencies]
proptest = "1.6"
rand = { workspace = true }
rand_chacha = { workspace = true }
matching-scenarios = { path = "../matching-scenarios" }

[lints]
workspace = true
