[package]
name = "matching-sequencer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Multi-batch block sequencer for prediction market matching"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-solver = { path = "../matching-solver", features = ["lp"] }
sybil-signing = { path = "../sybil-signing" }
sybil-oracle = { path = "../sybil-oracle" }
sybil-l1-protocol = { path = "../sybil-l1-protocol" }
sybil-verifier = { path = "../sybil-verifier" }
sybil-zk = { path = "../sybil-zk" }
blake3 = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rmp-serde = { workspace = true }
redb = "4"
commonware-codec = "2026.5.0"
commonware-cryptography = "2026.5.0"
commonware-parallel = "2026.5.0"
commonware-runtime = "2026.5.0"
commonware-storage = "2026.5.0"
futures = "0.3"
getrandom = { workspace = true }
p256 = { workspace = true, features = ["ecdsa"] }
ractor = { version = "0.15.12", default-features = false, features = ["async-trait", "tokio_runtime"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing = { workspace = true }
metrics = "0.24"

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
matching-scenarios = { path = "../matching-scenarios" }

[lints]
workspace = true
