[package]
name = "matching-sim"
version = "0.1.0"
edition = "2021"
description = "CLI simulation harness for prediction market matching"

[[bin]]
name = "matching-sim"
path = "src/main.rs"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-solver = { path = "../matching-solver", features = ["milp"] }
matching-scenarios = { path = "../matching-scenarios" }
sybil-verifier = { path = "../sybil-verifier" }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
serde_json = "1"

[features]
default = ["lp", "conic"]
viz = ["matching-solver/viz"]
lp = ["matching-solver/lp"]
conic = ["matching-solver/conic"]
parallel = ["matching-solver/parallel"]

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
