[package]
name = "matching-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI simulation harness for prediction market matching"

[[bin]]
name = "matching-sim"
path = "src/main.rs"

[[bin]]
name = "solver-experiments"
path = "src/bin/solver-experiments.rs"
required-features = ["lp", "conic"]

[dependencies]
blake3 = { workspace = true }
matching-engine = { path = "../matching-engine" }
matching-solver = { path = "../matching-solver", features = ["milp"] }
matching-scenarios = { path = "../matching-scenarios" }
sybil-verifier = { path = "../sybil-verifier" }
clap = { workspace = true, features = ["derive"] }
comfy-table = "7"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[features]
default = ["lp", "conic"]
viz = ["matching-solver/viz"]
lp = ["matching-solver/lp"]
conic = ["matching-solver/conic"]
parallel = ["matching-solver/parallel"]

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
