[package]
name = "matching-solver"
version = "0.1.0"
edition = "2021"
description = "Solvers for the prediction market matching problem"

[dependencies]
matching-engine = { path = "../matching-engine" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.good_lp]
version = "1.14"
features = ["highs"]

[dependencies.highs]
version = "2.0"

[dev-dependencies]
proptest = "1.9"
divan = "0.1"
matching-scenarios = { path = "../matching-scenarios" }

[[bench]]
name = "solver_bench"
harness = false

[features]
default = []
milp = []  # Legacy feature flag (good_lp/highs now always available)
viz = []   # Enable detailed phase snapshots and orderbook data
