[package]
name = "matching-solver"
version = "0.1.0"
edition = "2021"
description = "Solvers for the prediction market matching problem"

[dependencies]
matching-engine = { path = "../matching-engine" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.russcip]
version = "0.9"
features = ["bundled"]
optional = true

[dev-dependencies]
proptest = "1.9"
divan = "0.1"
matching-scenarios = { path = "../matching-scenarios" }

[[bench]]
name = "solver_bench"
harness = false

[features]
default = []
milp = ["dep:russcip"]  # MIQCQP solver via SCIP
viz = []   # Enable detailed phase snapshots and orderbook data
