[package]
name = "matching-solver"
version = "0.1.0"
edition = "2021"
description = "Solvers for the prediction market matching problem"

[dependencies]
matching-engine = { path = "../matching-engine" }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dependencies.russcip]
version = "0.9"
features = ["bundled"]
optional = true

[dependencies.highs]
version = "1"
optional = true

[dependencies.clarabel]
version = "0.11"
optional = true

[dependencies.rayon]
version = "1"
optional = true

[dev-dependencies]
proptest = "1.9"
divan = "0.1"
matching-scenarios = { path = "../matching-scenarios" }
sybil-verifier = { path = "../sybil-verifier", default-features = false }

[[bench]]
name = "solver_bench"
harness = false

[[example]]
name = "asym_bench"
required-features = ["conic"]

[features]
default = []
milp = ["dep:russcip"]  # MIQCQP solver via SCIP
lp = ["dep:highs"]      # LP solver via HiGHS
conic = ["dep:clarabel", "lp"] # Conic EG solver via Clarabel (reuses LP utilities)
parallel = ["dep:rayon"] # Parallel decomposed solves
viz = []   # Enable detailed phase snapshots and orderbook data

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
