[package]
name = "sequencer-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Agent-based multi-batch simulation harness for the prediction market sequencer (dev-only; not linked by sybil-api)"

[[bin]]
name = "sybil-sim"
path = "src/bin/sybil_sim.rs"

[dependencies]
blake3 = { workspace = true }
matching-engine = { path = "../matching-engine" }
matching-scenarios = { path = "../matching-scenarios" }
matching-sequencer = { path = "../matching-sequencer" }
sybil-oracle = { path = "../sybil-oracle" }
rand = { workspace = true }
rand_chacha = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = "7"
rmp-serde = { workspace = true }

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
