[package]
name = "sybil-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API for AI agent trading on Sybil prediction markets"

[[bin]]
name = "sybil-api"
path = "src/main.rs"

[[bin]]
name = "sybil-admin"
path = "src/bin/sybil_admin.rs"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-sequencer = { path = "../matching-sequencer" }
sybil-api-types = { path = "../sybil-api-types", features = ["openapi"] }
sybil-client = { path = "../sybil-client" }
sybil-oracle = { path = "../sybil-oracle" }
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
utoipa = { version = "5", features = ["axum_extras"] }
hex = "0.4"
p256 = { version = "0.14.0-rc.7", features = ["ecdsa"] }
getrandom = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
