[package]
name = "sybil-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP API for AI agent trading on Sybil prediction markets"

[[bin]]
name = "sybil-api"
path = "src/main.rs"

[[bin]]
name = "sybil-admin"
path = "src/bin/sybil_admin.rs"

[[bin]]
name = "sybil-openapi"
path = "src/bin/sybil_openapi.rs"

[dependencies]
matching-engine = { path = "../matching-engine" }
matching-sequencer = { path = "../matching-sequencer" }
sybil-api-types = { path = "../sybil-api-types", features = ["openapi"] }
sybil-client = { path = "../sybil-client" }
sybil-history-types = { path = "../sybil-history-types" }
sybil-oracle = { path = "../sybil-oracle" }
sybil-verifier = { path = "../sybil-verifier" }
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tower-http = { version = "0.7", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
hex = { workspace = true }
ipnet = { workspace = true }
p256 = { workspace = true, features = ["ecdsa"] }
ratelimit = { workspace = true }
getrandom = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json", "query"] }
rmp-serde = { workspace = true }
serde_yaml = "0.9"
base64 = "0.23"
ciborium = "0.2"
sha2 = "0.11"

[dev-dependencies]
sybil-l1-protocol = { path = "../sybil-l1-protocol" }
sybil-zk = { path = "../sybil-zk" }
sybil-history = { path = "../sybil-history" }
blake3 = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
redb = "4"

[lints.clippy]
# f64 ban is scoped to the consensus crates (matching-engine, matching-sequencer);
# this crate is legitimately floating-point (solver / sim / metrics / off-chain).
disallowed_types = "allow"
