[package]
name = "sybil-client"
version = "0.1.0"
edition = "2021"
description = "The shared Rust HTTP client for the Sybil API (SYB-171)"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = "1"
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
thiserror = { workspace = true }
