[package]
name = "sybil-client"
version = "0.1.0"
edition = "2021"
description = "The shared Rust HTTP client for the Sybil API (SYB-171)"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = "1"
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
thiserror = { workspace = true }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
