[package]
name = "sybil-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "The shared Rust HTTP client for the Sybil API (SYB-171)"

[dependencies]
sybil-api-types = { path = "../sybil-api-types" }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tracing = { workspace = true }
thiserror = { workspace = true }

# Used only by `examples/smoke_sign.rs` (SYB-223 post-deploy smoke). Kept as
# dev-dependencies so the shipped client library stays free of the crypto /
# canonical-bytes stack. Versions mirror the workspace (matching-sequencer).
[dev-dependencies]
sybil-signing = { path = "../sybil-signing" }
p256 = { workspace = true, features = ["ecdsa"] }
getrandom = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
