[package]
name = "sybil-l1-indexer"
version = "0.1.0"
edition = "2021"
description = "Anvil/Ethereum L1 deposit log indexer for Sybil bridge ingress"

[[bin]]
name = "sybil-l1-indexer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sybil-api-types = { path = "../sybil-api-types" }
sybil-client = { path = "../sybil-client" }
sybil-l1-protocol = { path = "../sybil-l1-protocol" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
