[package]
name = "sybil-l1-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Anvil/Ethereum L1 deposit log indexer for Sybil bridge ingress"

[[bin]]
name = "sybil-l1-indexer"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sybil-api-types = { path = "../sybil-api-types" }
sybil-client = { path = "../sybil-client" }
sybil-l1-protocol = { path = "../sybil-l1-protocol" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints.clippy]
# f64 ban (SYB-196) is scoped to the consensus crates (matching-engine,
# matching-sequencer). This crate is not on the state-root arithmetic path;
# opt out so macro-generated / off-chain f64 does not trip the workspace lint.
disallowed_types = "allow"
